syntax = "proto2";

package Models;

option java_package = "com.google.errorprone.bugpatterns.refactoringexperiment.models";
option java_outer_classname = "ClassDecl";

message clsDcl {
  required string name = 1;
  required string owner = 2;
  repeated string super_type = 3;
  required string kind = 4;

 }