syntax = "proto2";
import "Identification.proto";
package Models;

option java_package = "com.google.errorprone.bugpatterns.refactoringexperiment.models";


message ClassDeclaration {
    optional Identification id = 1;
    repeated string super_type = 2;
 }