syntax = "proto2";

package Models;

option java_package = "com.google.errorprone.bugpatterns.refactoringexperiment.models";
option java_outer_classname = "MethodInvocation";

message MthdInvc {
  required string id = 1;
  required string name = 2;
  required string owner = 3;
  required string signature = 4;
  required string kind = 5;
  // index against id | kind| additional info
  map<int32,string> args = 6;
  optional string receiver = 7;
 }